Got Exterior Spacing Correct, now I just need to get the single post spacing correct

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   display: flex;
+  box-sizing: content-box;
   flex-flow: column;
   height: 100%;
 }
@@ -15,4 +16,5 @@
 
 body > #root > div {
   height: 100vh;
+  overflow: hidden;
 }
