--- a/src/Components/BlogPost/BlogPost.css
+++ b/src/Components/BlogPost/BlogPost.css
@@ -1,8 +1,8 @@
 .scroll-container{
     height: 100%;
-    overflow-y:auto;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .fill-height {
